20260205 update1 phase1 complete: needs better automated regression test

--- a/nova/ui/html/index.html
+++ b/nova/ui/html/index.html
@@ -134,7 +134,7 @@
                 </select>
             </div>
             
-            <input type="datetime-local" class="datetime-input" id="datetimeInput">
+            <input type="datetime-local" class="datetime-input" id="datetimeInput" step="1">
             
             <div class="timeline-track">
                 <div class="timeline-date" id="timelineDate">Jan 27, 2026</div>
