20260206 update1 phase 2 initial

--- a/nova/ui/html/admin.html
+++ b/nova/ui/html/admin.html
@@ -33,6 +33,7 @@
                             <th>Username</th>
                             <th>Role</th>
                             <th>Status</th>
+                            <th>Scopes</th>
                             <th>Created</th>
                             <th>Actions</th>
                         </tr>
